--- a/style.css
+++ b/style.css
@@ -36,6 +36,15 @@
         overflow: hidden;
     }
     
+    .container{
+        background: #000000;
+    }
+
+    .calculator{
+        border: 2px solid rgb(85, 78, 78);
+    }
+
+
 }
 
 .calculator{
